--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ python:
   #- "pypy3"
 
 install:
-  - travis_retry pip install --user pylint
-  - travis_retry pip install --user -r requirements.txt
-  - travis_retry pip install --user -r tests/requirements.txt
-  - travis_retry pip install --user pytest-cov coverage coveralls
+  - travis_retry pip install pylint
+  - travis_retry pip install -r requirements.txt
+  - travis_retry pip install -r tests/requirements.txt
+  - travis_retry pip install pytest-cov coverage coveralls
 
 script:
   py.test --cov=all
