--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,24 @@
 language: python
 python:
-  #- "2.6"
-  #- "2.7"
-  #- "3.2"
-  #- "3.3"
-  #- "3.4"
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
   - "3.5"
-  #- "nightly"
-  #- "pypy"
-  #- "pypy3"
+  - "nightly"
+  - "pypy"
+  - "pypy3"
 
 install:
   - travis_retry pip install pylint
   - travis_retry pip install -r requirements.txt
   - travis_retry pip install -r tests/requirements.txt
   - travis_retry pip install pytest-cov coverage coveralls
+
+caches:
+  directories:
+    - $HOME/.cache/pip
 
 script:
   py.test --cov=all
