[code-quality] Added pylint at the end of every travis build just to be able to lookup it there

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,6 @@ script:
   py.test --cov=app
 
 after_success:
+  - pylint app
   - coveralls
   - coverage xml && python-codacy-coverage -r coverage.xml
