Improved PATCH parameters handling by pull-requesting required updates to webargs and apispec projects
* https://github.com/sloria/webargs/pull/91
* https://github.com/marshmallow-code/apispec/pull/53

--- a/.pylintrc
+++ b/.pylintrc
@@ -59,7 +59,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=locally-disabled,too-few-public-methods
+disable=locally-disabled,too-few-public-methods,no-self-use
 
 
 [REPORTS]
@@ -99,7 +99,7 @@ logging-modules=logging
 [SIMILARITIES]
 
 # Minimum lines number of a similarity.
-min-similarity-lines=4
+min-similarity-lines=8
 
 # Ignore comments when computing similarities.
 ignore-comments=yes
@@ -322,7 +322,7 @@ max-branches=12
 max-statements=50
 
 # Maximum number of parents for a class (see R0901).
-max-parents=7
+max-parents=10
 
 # Maximum number of attributes for a class (see R0902).
 max-attributes=7
