--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,6 @@
-#Flask>=0.11
-https://github.com/mitsuhiko/flask/archive/master.zip
+Flask>=0.11
 
-#flask-restplus>0.9.0
-https://github.com/frol/flask-restplus/archive/patch-2.zip
+flask-restplus>=0.9.1
 
 Flask-Cors==2.1.2
 
