--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -12,7 +12,8 @@ werkzeug==0.11.4
 
 flask-marshmallow==0.6.2
 marshmallow-sqlalchemy==0.8.0
-webargs>=1.3.0
+# webargs>1.3.0
+https://github.com/frol/webargs/archive/patch-1.zip
 apispec>=0.8.0
 
 bcrypt==2.0
