--- a/.pylintrc
+++ b/.pylintrc
@@ -59,7 +59,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=locally-disabled,too-few-public-methods,no-self-use,too-many-ancestors
+disable=locally-disabled,too-few-public-methods,no-self-use,too-many-ancestors,bad-continuation
 
 
 [REPORTS]
