--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,23 +4,24 @@ flask-restplus>=0.9.1
 
 Flask-Cors==2.1.2
 
-SQLAlchemy==1.0.12
-SQLAlchemy-Utils==0.31.6
+SQLAlchemy==1.1.3
+SQLAlchemy-Utils==0.32.9
 Flask-SQLAlchemy==2.1
-Alembic==0.8.4
-werkzeug==0.11.4
+Alembic==0.8.7
+werkzeug==0.11.11
 
-flask-marshmallow==0.6.2
-marshmallow-sqlalchemy==0.8.0
-webargs>=1.3.0
-apispec>=0.8.0
+flask-marshmallow==0.7.0
+marshmallow-sqlalchemy==0.12.0
+webargs>=1.4.0
+apispec>=0.16.0
 
 bcrypt==2.0
 passlib==1.6.5
-Flask-OAuthlib==0.9.2
+#Flask-OAuthlib>0.9.3
+https://github.com/lepture/flask-oauthlib/archive/8a14799a8e7270eab776991c8eae87875f6fab6d.zip
 Flask-Login==0.3.2
 permission==0.4.1
 
-arrow==0.7.0
+arrow==0.8.0
 
 enum34; python_version < '3.4'
