Closes #75: Elaborated more on the deployment strategies

--- a/deploy/stack1/docker-compose.yml
+++ b/deploy/stack1/docker-compose.yml
@@ -9,6 +9,6 @@ revproxy:
 api:
   restart: always
   build: ../../
-  expose:
-    - "5000"
-
+  environment:
+    EXAMPLE_API_REVERSE_PROXY_SETUP: 'true'
+    FLASK_CONFIG: 'production'
