--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -18,8 +18,7 @@ apispec>=0.20.0
 
 bcrypt==3.1.3
 passlib==1.7.1
-#Flask-OAuthlib>0.9.3
-https://github.com/lepture/flask-oauthlib/archive/8a14799a8e7270eab776991c8eae87875f6fab6d.zip
+Flask-OAuthlib>=0.9.4
 Flask-Login==0.4.0
 permission==0.4.1
 
