--- a/tasks/app/boilerplates_templates/crud_module/resources.py.template
+++ b/tasks/app/boilerplates_templates/crud_module/resources.py.template
@@ -22,12 +22,12 @@ from .models import {{ model_name }}
 
 
 log = logging.getLogger(__name__)  # pylint: disable=invalid-name
-api = Namespace('{{ module_name }}', description="{{ module_title }}")  # pylint: disable=invalid-name
+api = Namespace('{{ module_namespace }}', description="{{ module_title }}")  # pylint: disable=invalid-name
 
 
 @api.route('/')
-@api.login_required(oauth_scopes=['{{ module_name }}:read'])
-class {{ module_title.replace(' ','') }}(Resource):
+@api.login_required(oauth_scopes=['{{ module_namespace }}:read'])
+class {{ module_title.replace(' ', '') }}(Resource):
     """
     Manipulations with {{ module_title }}.
     """
@@ -36,24 +36,24 @@ class {{ module_title.replace(' ','') }}(Resource):
     @api.response(schemas.Base{{ model_name }}Schema(many=True))
     def get(self, args):
         """
-        List of {{ module_name }}.
+        List of {{ model_name }}.
 
-        Returns a list of {{ module_title }} starting from ``offset`` limited by ``limit``
+        Returns a list of {{ model_name }} starting from ``offset`` limited by ``limit``
         parameter.
         """
         return {{ model_name }}.query.offset(args['offset']).limit(args['limit'])
 
-    @api.login_required(oauth_scopes=['{{ module_name }}:write'])
+    @api.login_required(oauth_scopes=['{{ module_namespace }}:write'])
     @api.parameters(parameters.Create{{ model_name }}Parameters())
     @api.response(schemas.Detailed{{ model_name }}Schema())
     @api.response(code=HTTPStatus.CONFLICT)
     def post(self, args):
         """
-        Create a new {{ model_name }}.
+        Create a new instance of {{ model_name }}.
         """
         with api.commit_or_abort(
                 db.session,
-                default_error_message="Failed to create a new {{ module_name_singular }}"
+                default_error_message="Failed to create a new {{ model_name }}"
             ):
             {{ module_name_singular }} = {{ model_name }}(**args)
             db.session.add({{ module_name_singular }})
@@ -61,7 +61,7 @@ class {{ module_title.replace(' ','') }}(Resource):
 
 
 @api.route('/<int:{{ module_name_singular }}_id>')
-@api.login_required(oauth_scopes=['{{ module_name }}:read'])
+@api.login_required(oauth_scopes=['{{ module_namespace }}:read'])
 @api.response(
     code=HTTPStatus.NOT_FOUND,
     description="{{ model_name }} not found.",
@@ -79,7 +79,7 @@ class {{ model_name }}ByID(Resource):
         """
         return {{ module_name_singular }}
 
-    @api.login_required(oauth_scopes=['{{ module_name }}:write'])
+    @api.login_required(oauth_scopes=['{{ module_namespace }}:write'])
     @api.permission_required(permissions.WriteAccessPermission())
     @api.parameters(parameters.Patch{{ model_name }}DetailsParameters())
     @api.response(schemas.Detailed{{ model_name }}Schema())
@@ -96,7 +96,7 @@ class {{ model_name }}ByID(Resource):
             db.session.merge({{ module_name_singular }})
         return {{ module_name_singular }}
 
-    @api.login_required(oauth_scopes=['{{ module_name }}:write'])
+    @api.login_required(oauth_scopes=['{{ module_namespace }}:write'])
     @api.permission_required(permissions.WriteAccessPermission())
     @api.response(code=HTTPStatus.CONFLICT)
     @api.response(code=HTTPStatus.NO_CONTENT)
