--- a/deploy/stack2/docker-compose.yml
+++ b/deploy/stack2/docker-compose.yml
@@ -11,6 +11,8 @@ services:
 
   api:
     restart: always
+    volumes:
+      - "/tmp:/tmp"
     build:
       context: ../../
       args:
@@ -18,4 +20,4 @@ services:
     environment:
       EXAMPLE_API_REVERSE_PROXY_SETUP: 'true'
       FLASK_CONFIG: 'production'
-    command: 'uwsgi --need-app --manage-script-name --mount /=app:create_app() --uwsgi-socket 0.0.0.0:5000'
+    command: 'uwsgi --need-app --manage-script-name --mount /=app:create_app() --uwsgi-socket 0.0.0.0:5000 --enable-threads --logger file:logfile=/tmp/flask-stack2.log,maxsize=104857600'
