--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,4 @@
-Flask>=0.11
+Flask>=1.0,<2.0
 
 flask-restplus>=0.10.1
 
@@ -8,7 +8,7 @@ SQLAlchemy==1.1.5
 SQLAlchemy-Utils==0.32.12
 Flask-SQLAlchemy==2.2
 Alembic==0.8.10
-werkzeug==0.11.15
+werkzeug>=0.14.1,<0.15
 
 marshmallow>=2.13.5
 flask-marshmallow==0.7.0
