--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,28 +1,28 @@
-Flask>=1.0,<2.0
+Flask>=1.1,<2
 
-flask-restplus==0.11.0
+flask-restplus>=0.11.0,<0.12
 
-Flask-Cors==3.0.2
+Flask-Cors>=3.0.8,<4
 
-SQLAlchemy==1.1.5
-SQLAlchemy-Utils==0.32.12
-Flask-SQLAlchemy==2.2
-Alembic==0.8.10
-werkzeug>=0.14.1,<0.15
+SQLAlchemy>=1.3.0,<2
+SQLAlchemy-Utils>=0.34,<0.35
+Flask-SQLAlchemy>=2.4,<3
+Alembic>=1.0,<2
+werkzeug>=0.15,<0.16
 
-marshmallow>=2.13.5
-flask-marshmallow==0.7.0
-marshmallow-sqlalchemy==0.12.0
-webargs>=1.4.0
+marshmallow>=2.13.5,<3
+flask-marshmallow>=0.7,<0.8
+marshmallow-sqlalchemy>=0.12,<0.13
+webargs>=1.4.0,<2
 apispec>=0.20.0,<0.39
 
-bcrypt==3.1.3
-passlib==1.7.1
-Flask-OAuthlib>=0.9.4
-Flask-Login==0.4.0
-permission==0.4.1
+bcrypt>=3.1.3,<4
+passlib>=1.7.1,<2
+Flask-OAuthlib>=0.9.4,<0.10
+Flask-Login>=0.4.0,<0.5
+permission>=0.4.1,<0.5
 
-arrow==0.8.0
+arrow>=0.8.0,<0.9
 
 six
 enum34; python_version < '3.4'
