Fixed frontend handling for static files with React

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ exclude = '''
     \.git,
     \_assets,
     \_db,
-    \_frrontend,
+    \_frontend,
     clients,
     deploy,
     Houston.egg-info,
