--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,34 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+exclude: |
+  (?x)(
+      ^_assets/ |
+      ^_db/ |
+      ^_frontend/ |
+      ^app/static/ |
+      ^app/templates/ |
+      ^clients/ |
+      ^deploy/ |
+      ^Houston.egg-info |
+      ^virtualenv |
+      ^migrations/versions/
+  )
 repos:
-  - repo: https://github.com/psf/black
-    rev: stable
+  # - repo: https://github.com/psf/black
+  #   rev: stable
+  #   hooks:
+  #     - id: black
+  #       language_version: python3.6
+  - repo: local
     hooks:
-      - id: black
-        language_version: python3.6
+      - id: brunette
+        name: brunette
+        description: Run Brunette on Python code (fork of Black).
+        entry: brunette --config=setup.cfg
+        language: system
+        types: [python]
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.1
+    rev: 3.8.3
     hooks:
       - id: flake8
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -16,6 +37,7 @@ repos:
       - id: requirements-txt-fixer
       - id: check-toml
       - id: check-json
+      - id: check-yaml
       - id: check-ast
       - id: check-executables-have-shebangs
       - id: check-docstring-first
@@ -26,16 +48,3 @@ repos:
       - id: mixed-line-ending
       - id: end-of-file-fixer
       - id: fix-encoding-pragma
-
-exclude: |
-    (?x)(
-        ^\_assets/|
-        ^\_frontend/|
-        ^app/static/|
-        ^app/templates/|
-        ^clients/|
-        ^deploy/|
-        ^mobile/|
-        ^Houston.egg-info|
-        ^virtualenv
-    )
