--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,6 +4,7 @@ apispec>=0.20.0,<0.39
 arrow>=0.8.0,<0.9
 
 bcrypt>=3.1.3,<4
+
 Flask>=1.1,<2
 Flask-Caching>=1.8.0
 
@@ -29,6 +30,9 @@ Pillow
 premailer
 
 pygeocoder
+scikit-build
+setuptools>=42
+setuptools_scm[toml]>=3.4
 
 six
 
@@ -40,4 +44,5 @@ tqdm
 utool
 webargs==5.5.2
 werkzeug>=0.15,<0.16
+wheel
 xkcdpass
