--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,7 @@
 [flake8]
-ignore = D100,D101,D102,D103,D105,D200,D205,D210,D400,D401,D403,E127,E201,E202,E203,E221,E222,E231,E241,E265,E271,E272,E301,E501,N802,N803,N805,N806,W503,F401
-exclude =
-    .git,
-    _assets,
-    _db,
-    _frontend,
-    clients,
-    deploy,
-    migrations/versions/*.py,
-    Houston.egg-info,
-    virtualenv,
-    __pycache__
-
 # This section configures `flake8`, the python linting utility.
 # See also https://flake8.pycqa.org/en/latest/user/configuration.html
+ignore = D100,D101,D102,D103,D105,D200,D205,D210,D400,D401,D403,E127,E201,E202,E203,E221,E222,E241,E265,E271,E272,E301,E501,N802,N803,N805,N806,W503
 # D100 - Missing docstring in public module
 # D101 - Missing docstring in public class
 # D102 - Missing docstring in public method
@@ -34,7 +22,6 @@ exclude =
 # E203 - whitespace before ‘:’
 # E221 - multiple spaces before operator
 # E222 - multiple spaces after operator
-# E231 - missing whitespace after ','
 # E241 - multiple spaces after ‘,’
 # E265 - block comment should start with ‘# ‘
 # E271 - multiple spaces after keyword
@@ -51,34 +38,21 @@ exclude =
 # N* codes come from pep8-naming, which integrates with flake8
 # See also https://github.com/PyCQA/pep8-naming#error-codes
 
-# W503 - line break before binary operator
-#
-# The reason for adding W503 to the ignored list is because W503 (Line break
-# occurred before a binary operator) and W504 (Line break occurred after a binary
-# operator) are both enabled in flake8 by default for some reason.  But they are
-# mutually exclusive so one has to be disabled / ignored.
-#
-# According to pep8 at the time of the commit
-# https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
-#
-# ```
-# income = (gross_wages +
-#           taxable_interest +
-#           (dividends - qualified_dividends) -
-#           ira_deduction -
-#           student_loan_interest)
-# income = (gross_wages
-#           + taxable_interest
-#           + (dividends - qualified_dividends)
-#           - ira_deduction
-#           - student_loan_interest)
-# ```
-#
-# W504 (Line break occurred after a binary operator) is the correct behavior.
-
 # Exclude the git directory and virtualenv directory (as `.env`)
+exclude = .git,.env
 
+[tool:brunette]
+line-length = 90
+verbose = false
+# skip-string-normalization = true
+single-quotes = true
 
-[swagger]
-config-dir = _docs/
-output-file = docs/swagger.json
+[tool:pytest]
+minversion = 5.4
+addopts = -p no:doctest --xdoctest --xdoctest-style=google
+testpaths =
+    houston
+filterwarnings =
+    default
+    ignore:.*No cfgstr given in Cacher constructor or call.*:Warning
+    ignore:.*Define the __nice__ method for.*:Warning
