--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,8 @@ single-quotes = true
 minversion = 5.4
 addopts = -p no:doctest --xdoctest --xdoctest-style=google
 testpaths =
-    houston
+    app
+    tests
 filterwarnings =
     default
     ignore:.*No cfgstr given in Cacher constructor or call.*:Warning
