--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -23,6 +23,8 @@ Flask-Paranoid
 flask-restplus>=0.11.0,<0.12
 Flask-SQLAlchemy>=2.4,<3
 
+gitpython
+
 marshmallow>=2.13.5,<3
 marshmallow-sqlalchemy>=0.12,<0.13
 passlib>=1.7.1,<2
@@ -33,6 +35,7 @@ premailer
 
 pygeocoder
 python-gitlab
+python-magic
 
 scikit-build
 
