--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,6 +5,8 @@ arrow>=0.8.0,<0.9
 
 bcrypt>=3.1.3,<4
 
+blinker
+
 Flask>=1.1,<2
 Flask-Caching>=1.8.0
 
@@ -31,6 +33,10 @@ premailer
 
 pygeocoder
 scikit-build
+
+sentry-sdk>=0.10.2
+sentry-sdk[flask]>=0.10.2
+
 setuptools>=42
 setuptools_scm[toml]>=3.4
 
