--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,7 +1,6 @@
-name: Deploy Python App
+name: Deploy Dockerized Python App
 
 on: push
-
 
 jobs:
   deploy:
@@ -11,20 +10,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v1
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Build Docker image
+        run: docker build -t my-python-app .
 
-      - name: Deploy App
-        run: |
-          python server.py
+      - name: Run Docker container
+        run: docker run -d -p 5000:5000 --name my-app my-python-app
 
-      - name: Clean up
+      - name: Test Deployed App
         run: |
+          # Aguarde alguns segundos para garantir que a aplicação está em execução
+          sleep 10
+          # Teste o endpoint usando curl
           curl http://127.0.0.1:5000/api/v1/
