--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,10 +14,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image
-        run: docker build -t my-python-app .
+        run: |
+          cd deploy/stack1
+          docker-compose build
+          docker-compose up
 
-      - name: Run Docker container
-        run: docker run -d -p 5000:5000 --name my-app my-python-app
 
       - name: Test Deployed App
         run: |
