--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,7 +1,7 @@
 name: Deploy Dockerized Python App
 
-on: push
-
+on:
+  push
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -9,20 +9,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build Docker image
+      - name: Install dependencies
         run: |
-          cd deploy/stack1
-          docker-compose build
-          docker-compose up
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-
-      - name: Test Deployed App
+      - name: Deploy App
         run: |
-          # Aguarde alguns segundos para garantir que a aplicação está em execução
-          sleep 10
-          # Teste o endpoint usando curl
-          curl http://127.0.0.1:5000/api/v1/
+         invoke app.run
