--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -9,16 +9,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v1
 
-      - name: Deploy App
+      - name: Run Docker container
+        run: docker run -d -p 5000:5000 --name my-app my-python-app
+
+      - name: Test Deployed App
         run: |
-         invoke app.run
+          # Aguarde alguns segundos para garantir que a aplicação está em execução
+          sleep 10
+          # Teste o endpoint usando curl
+          curl http://127.0.0.1:5000/api/v1/
