--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Run Docker container
-        run: docker run  --rm --publish 5000:5000 frolvlad/flask-restplus-server-example
+        run: docker run -d --publish 5000:5000 frolvlad/flask-restplus-server-example
 
       - name: Test Deployed App
         run: |
