--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -30,7 +30,7 @@ jobs:
       - name: ZAP Scan(DAST)
         uses: zaproxy/action-full-scan@v0.8.0
         with:
-          target: 'http://127.0.0.1:5000/api/v1/'
+          target: 'http://127.0.0.1:5000'
       
       - name: Upload App Threat(DAST)  
         uses: actions/upload-artifact@v1
