--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -31,7 +31,11 @@ jobs:
         uses: zaproxy/action-full-scan@v0.8.0
         with:
           target: 'http://127.0.0.1:5000'
-      
+
+
+      - name: Run Docker container
+        run: ls -la
+        
       - name: Upload App Threat(DAST)  
         uses: actions/upload-artifact@v1
         with:
